# my-qa-toolbox

./: README.md
ai-agents/cy-commands-ai/: .env.example  .gitignore  Dockerfile  PROMPT_TEMPLATE.md  README.md  cypress.config.ts  docker-compose.yml  package.json  tsconfig.json
ai-agents/cy-commands-ai/.github/workflows/: ci.yml
ai-agents/cy-commands-ai/cypress/e2e/: ai-assert.cy.ts  ai-generate-testcase.cy.ts  ai-triage.cy.ts
ai-agents/cy-commands-ai/cypress/fixtures/: demo-app.html
ai-agents/cy-commands-ai/cypress/support/: commands.ts
ai-agents/cy-commands-ai/cypress/support/ai/: aiAssert.ts  aiGenerateTestCase.ts  aiTriage.ts  langchainClient.ts
ai-agents/cy-commands-ai/docs/: cy-commands-ideas.md  cy-tests-painful-points.md
ai-agents/cy-commands-ai/eval/: dataset.json  eval-runner.ts
ai-agents/doc/ai-agent-ideas/: README.md  python_scripts_ideas_for_playwright_api_tests.md
ai-agents/qarvis/: PROMPT-EXEC.md  README.md  spec_jarvisqai.md
ai-agents/smoke-tests-gate/: PROMPT-EXEC.md  README.md  spec_pitch1_pr_smoke_gate.md
ai-agents/smoke-tests-gate/doc/: PALYWRIGHT-CHEATSHEET.md
ai-agents/smoke-tests-sentinel/: .env.example  Dockerfile  __main__.py  docker-compose.yml  pyproject.toml
ai-agents/smoke-tests-sentinel/.github/workflows/: smokesentinel.yml
ai-agents/smoke-tests-sentinel/agent/: sentinel.py
ai-agents/smoke-tests-sentinel/agent/nodes/: __init__.py  reporter_node.py  sentinel_coordinator.py
ai-agents/smoke-tests-sentinel/agent/prompts/: __init__.py
ai-agents/smoke-tests-sentinel/evals/: smoke_eval_harness.py
ai-agents/smoke-tests-sentinel/mcp/: playwright_mcp_client.py
ai-agents/smoke-tests-sentinel/models/: state.py
ai-agents/smoke-tests-sentinel/notifier/: github_pr_commenter.py  slack_notifier.py
ai-agents/smoke-tests-sentinel/tests/: test_coordinator.py  test_smokesentinel.py
ai-agents/user-story-to-jira/: .env.example  PROMPT.md  README.md  index.html  package-lock.json  package.json
ai-agents/user-story-to-jira/src/: App.jsx
ai-agents/user-story-to-jira/src/components/: JiraGenerator.jsx
env-python-py-scripts/setup-python-env/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
env-python-py-scripts/setup-python-env/.github/workflows/: ci.yml
env-python-py-scripts/setup-python-env/scripts/: setup_dev_env.py
env-python-py-scripts/setup-python-env/tests/: test_setup_dev_env.py
git-py-scripts/commit-push/: .flake8  README.md  git_commit_push.py
git-py-scripts/commit-push-ai/: README.md  git_commit_push_ai.py
git-py-scripts/create-repo/: README.md  create_github_repo.py
git-py-scripts/precommit/: .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
prompts/cv-ats/: README.md  module-linkedin-about.md  prompt-cv-ats.md
prompts/optimus-prompt/: README.md  optimus-prompt.xml  qa-toolbox-precommit-prompt.xml
