[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smokesentinel"
version = "2.0.0"
description = "AI agent for critical smoke tests < 5 min — Playwright MCP noyau"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.2",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "slack-sdk>=3.27",
    "PyGithub>=2.3",
    "jinja2>=3.1",        # HTML report rendering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]
eval = [
    "sentence-transformers>=3.0",
    "langsmith>=0.2",
]

[project.scripts]
smokesentinel = "smokesentinel.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agent --cov=mcp --cov=models --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
