[build-system]
requires      = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name        = "dev-setup-kit"
version     = "1.0.0"
description = "AI-powered developer environment installer — Python + PyCharm + Ollama"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "installer", "devops", "automation",
    "langchain", "ollama", "pycharm", "python",
]

dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "requests>=2.32",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
    # Type stubs
    "types-requests>=2.32",
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    # Security
    "bandit>=1.7",
    "pip-audit>=2.7",
    # Pre-commit
    "pre-commit>=3.7",
]

[project.scripts]
setup-dev-env = "scripts.setup_dev_env:main"

# ── Ruff (linter + import sorter) ────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in default args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style             = "double"
indent-style            = "space"
skip-magic-trailing-comma = false

# ── Black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py311", "py312", "py313", "py314"]
include        = '\.pyi?$'
exclude        = '''
/(
    \.git | \.venv | \.mypy_cache | \.ruff_cache
  | build | dist | __pycache__
)/
'''

# ── isort (import sorting) ────────────────────────────────────────────────────
[tool.isort]
profile                   = "black"
line_length               = 100
known_first_party         = ["scripts", "tests"]
known_third_party         = ["langchain", "langchain_ollama", "requests", "rich"]
force_sort_within_sections = true

# ── mypy (static type checking) ───────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true   # many langchain sub-packages lack stubs
exclude                = ["build/", "dist/", ".venv/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths        = ["tests"]
addopts          = "-v --tb=short --cov=scripts --cov-report=term-missing --cov-report=xml"
asyncio_mode     = "auto"
log_cli          = true
log_cli_level    = "INFO"
filterwarnings   = ["ignore::DeprecationWarning"]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["scripts"]
omit     = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true

# ── bandit (security linter) ──────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B603", "B607"]  # subprocess calls are intentional here
